# main.go
@@ -12,26 +12,43 @@ import (
 	"github.com/student-api/stores"
 )
 
-func connection() (stores.SqlDb, error) {
+func studentDb() (stores.StudentStore, error) {
 	con, err := sql.Open("mysql", "root:root@tcp(localhost:3306)/student")
 	if err != nil {
-		return stores.SqlDb{}, err
+		return stores.StudentStore{}, err
 	}
-	return stores.SqlDb{con}, nil
+	return stores.StudentStore{con}, nil
+}
+
+func subjectDb() (stores.SubjectStore, error) {
+	con, err := sql.Open("mysql", "root:root@tcp(localhost:3306)/student")
+	if err != nil {
+		return stores.SubjectStore{}, err
+	}
+	return stores.SubjectStore{con}, nil
+}
+
+func enrollmentDb() (stores.EnrollmentStore, error) {
+	con, err := sql.Open("mysql", "root:root@tcp(localhost:3306)/student")
+	if err != nil {
+		return stores.EnrollmentStore{}, err
+	}
+	return stores.EnrollmentStore{con}, nil
 }
 
 func main() {
-	con, err := connection()
-	con1, err := sql.Open("mysql", "root:root@tcp(localhost:3306)/student")
-	if err != nil {
+	con1, err1 := sql.Open("mysql", "root:root@tcp(localhost:3306)/student")
+	con2, err2 := subjectDb()
+	con3, err3 := enrollmentDb()
+	if err1 != nil && err2 != nil && err3 != nil {
 		return
 	}
 
-	subjectService := service.NewSubStore(con)
+	subjectService := service.NewSubStore(con2)
 	subjectHandler := handler.NewSubHandler(subjectService)
 
-	enrollmentService := service.NewEnrollmentStore(con)
-	studentService := service.NewStudentService(stores.SqlDb{con1}, enrollmentService, subjectService)
+	enrollmentService := service.NewEnrollmentStore(con3)
+	studentService := service.NewStudentService(stores.StudentStore{con1}, enrollmentService, subjectService)
 	studentHandler := handler.NewStudentHandler(studentService)
 
 	server := mux.NewRouter()
@@ -40,6 +57,8 @@ func main() {
 	server.HandleFunc("/subject", subjectHandler.InsertSubject).Methods("POST")
 	server.HandleFunc("/student", studentHandler.InsertStudent).Methods("POST")
 	server.HandleFunc("/student", studentHandler.GetStudent).Methods("GET")
+
+	// Enroll student with subject
 	server.HandleFunc("/student/{rollNo}/subject/{id}", studentHandler.EnrollStudent).Methods("POST")
 
 	// List all subjects of a particular student
